default dropdown settings; error msg; left-justify

--- a/experiments/priors/css/local-style.css
+++ b/experiments/priors/css/local-style.css
@@ -3,3 +3,16 @@
 	width: 400;
 	margin: 10px;
 }
+
+.question1a{
+	text-align:left;
+}
+.question1b{
+	text-align:left;
+}
+.question2a{
+	text-align:left;
+}
+.question2b{
+	text-align:left;
+}
